apply requested changes on issue #1
add a email field to user model and can be validate it
add new route avatar and add post route
